Alfred Grimhand's Barcrawl: Polish (#1385)
* Alfred Grimhand's Barcrawl: Separate getting started & Drinking step

This makes it easier to add the barcrawl card as a requirement for the drinking steps

* Alfred Grimhand's Barcrawl: Rename "talk to guard" step to include that you get a card there

* Alfred Grimhand's Barcrawl: Minor refactors/List.of/modernizations